# AU-healthdata-atlas

./: .gitignore  Neo4j-e0662ca0-Created-2026-02-27.txt  README.md  pyproject.toml
.github/workflows/: deploy-atlas.yml
archive/2026-06-11-repo-cleanup/: README.md
archive/2026-06-11-repo-cleanup/output/: connection_match_review.csv  gap_custodians.json  kg_load_summary.json
archive/2026-06-11-repo-cleanup/queries/: ACT_test.cypher
archive/2026-06-11-repo-cleanup/raw_data/: KG_Iteration2_Codex_Prompt.md
config/: connection_alias_overrides.csv
frontend/atlas/: app.js  index.html  styles.css
frontend/atlas/data/: atlas_data.js  atlas_data.json
output/: connection_match_review.csv  connection_match_review_dryrun.csv  gap_custodians.json  kg_load_summary.json  kg_load_summary_dryrun.json
output/frontend/: map_bundle.json
output/source_audit/: source_audit.csv  source_audit.json  source_claims.jsonl
queries/: map_frontend_queries.cypher  trainline_map_browser_examples.cypher
raw_data/: AU_Health_Data_Pathway_Register.md  AU_Health_Data_Pathway_Register_v3.md  pathway_cards.csv
scripts/: build_source_audit.py  export_atlas_bundle.py  export_kg_snapshot.py  export_map_frontend_payload.py  load_au_health_kg_via_mcp.py  neo4j_credentials.py  register_parsing.py  serve_map_api.py
tests/: conftest.py  golden_util.py  regenerate_golden.py  test_connection_matching.py  test_export_snapshot_golden.py  test_neo4j_credentials.py  test_register_parsing.py
tests/golden/: export_digests.json  export_manifest.normalized.json
(+87 files in other folders)
