[project]
name = "au-healthdata-map"
version = "0.1.0"
description = "Curated Australian health data access pathway register, Neo4j knowledge graph loader, and map payload exporter."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "neo4j>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "golden: golden snapshot of export_from_sources; if raw_data/config changed intentionally, regenerate via 'uv run python tests/regenerate_golden.py'",
]
